<resources>
    <string name="app_name">My First App</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save">SAVE</string>
    <string name="e_mail">E-mail</string>
    <string name="male">Male</string>
    <string name="turkish">Türkçe</string>
    <string name="female">Female</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="english">English</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">SEND</string>
    <string name="attach_a_file">Attach a File</string>
    <string name="send_e_mail">Send E-mail</string>
    <string name="user_list">User List</string>
    <string name="user_settings">User Settings</string>
    <string name="gender">Gender</string>
    <string name="language">Language</string>
    <string name="sensor_list">Sensor List</string>
    <string name="exp_24">Exp: 24</string>
    <string name="exp_172">Exp: 172</string>
    <string name="exp_60_5">Exp: 60.5</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="add_note">ADD</string>
    <string name="unavailable">Unavailable</string>
    <string name="my_first_app">My First App</string>
    <string name="welcome_screen_image">Welcome Screen Image</string>
    <string name="welcome">Welcome!</string>
    <string name="by_ferhat_ta_from_ytu">Ferhat Taş\nYıldız Technical University\nComputer Engineering</string>
    <string name="content">Content</string>
    <string name="usernameText">Username:</string>
    <string name="passwordText">Password:</string>
    <string name="exit">Exit</string>
    <string name="welcome_to_my_first_app">Welcome to My First App</string>
    <string name="note">Note</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sign_up">SIGN UP</string>
    <string name="phone_amp_sms"><![CDATA[Phone & SMS]]></string>
    <string name="alarm">Alarm</string>
    <string name="asynctask">AsyncTask</string>
    <string name="download">Download</string>
    <string name="location">Location</string>
    <string name="update">UPDATE</string>
    <string name="imageicon">imageIcon</string>

    <string name="bicycle">On a bicycle: </string>
    <string name="onfoot">On foot: </string>
    <string name="running">Running: </string>
    <string name="still">Still: </string>
    <string name="tilting">Tilting: </string>
    <string name="unknown_activity">Unknown activity: </string>
    <string name="invehicle">In a vehicle: </string>
    <string name="walking">Walking: </string>
</resources>
