<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:divider="?android:dividerVertical"
    android:orientation="vertical"
    android:showDividers="middle"
    tools:context=".SharedPreferencesActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@color/colorBackround_note"
    android:gravity="center"
    android:orientation="vertical">

        <TextView
            android:id="@+id/textView_userSettings"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:fontFamily="@font/actor"
            android:gravity="center|start"
            android:text="@string/user_settings"
            android:textAllCaps="false"
            android:textColor="#017883"
            android:textSize="36sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#02727C" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="5"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_username"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username"
                android:textColor="@color/colorTextView"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="6dp"
                android:textColor="@color/colorTextView"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="5"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_age"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/age"
                android:textColor="@color/colorTextView"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_age"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="@color/colorBackgroundTint_editText"
                android:ems="10"
                android:hint="@string/exp_24"
                android:inputType="numberSigned"
                android:labelFor="@id/editText_age"
                android:paddingStart="5dp"
                android:textColor="@color/colorEditText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="5"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_height"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/height"
                android:textColor="@color/colorTextView"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_height"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="@color/colorBackgroundTint_editText"
                android:ems="10"
                android:hint="@string/exp_172"
                android:inputType="numberSigned"
                android:labelFor="@id/editText_height"
                android:paddingStart="5dp"
                android:textColor="@color/colorEditText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="5"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_weight"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight"
                android:textColor="@color/colorTextView"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_weight"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="@color/colorBackgroundTint_editText"
                android:ems="10"
                android:hint="@string/exp_60_5"
                android:inputType="numberDecimal"
                android:labelFor="@id/editText_weight"
                android:paddingStart="5dp"
                android:textColor="@color/colorEditText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender"
                android:textColor="@color/colorTextView"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup_gender"
                android:layout_width="270dp"
                android:layout_height="51dp"
                android:orientation="horizontal"
                android:paddingStart="6dp">

                <RadioButton
                    android:id="@+id/radioButton_male"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/male"
                    android:textColor="@color/colorEditText"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton_female"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/female"
                    android:textColor="@color/colorEditText"
                    android:textSize="20sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/language"
                android:textColor="@color/colorTextView"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup_language"
                android:layout_width="270dp"
                android:layout_height="51dp"
                android:orientation="horizontal"
                android:paddingStart="6dp">

                <RadioButton
                    android:id="@+id/radioButton_turkish"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/turkish"
                    android:textColor="@color/colorEditText"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton_english"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/english"
                    android:textColor="@color/colorEditText"
                    android:textSize="20sp" />

            </RadioGroup>

        </LinearLayout>


        <Switch
            android:id="@+id/switch_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="5"
            android:buttonTint="@color/colorAccent"
            android:switchMinWidth="75dp"
            android:text="@string/dark_mode"
            android:textColor="@color/colorEditText"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button_send"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="535dp" />

    </LinearLayout>

</LinearLayout>