<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground2"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".WelcomeScreen">

    <TextView
        android:id="@+id/textView_welcomeScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="80sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="105dp" />


    <ImageView
        android:id="@+id/imageView_welcomeScreen"
        android:layout_width="match_parent"
        android:layout_height="296dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/welcome_screen_image"
        android:src="@drawable/android_welcome" />

    <TextView
        android:id="@+id/textView_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/welcome_screen_image"
        android:fontFamily="@font/actor"
        android:text="@string/by_ferhat_ta_from_ytu"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>