<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".NoteActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@color/colorBackround_note"
    android:gravity="center"
    android:orientation="vertical">

        <TextView
            android:id="@+id/textView_note"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:fontFamily="@font/actor"
            android:gravity="center|start"
            android:text="@string/note"
            android:textAllCaps="false"
            android:textColor="#017883"
            android:textSize="36sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#02727C" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="8"
            android:autofillHints=""
            android:background="@drawable/rounded_note"
            android:ems="10"
            android:gravity="start|center"
            android:hint="@string/title"
            android:inputType="text|textCapSentences"
            android:paddingStart="5dp"
            android:textColor="@color/colorEditText" />

        <EditText
            android:id="@+id/editText_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="200"
            android:autofillHints=""
            android:background="@drawable/rounded_note"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/content"
            android:inputType="textMultiLine|textCapSentences"
            android:paddingStart="5dp"
            android:textColor="@color/colorEditText" />

        <Button
            android:id="@+id/button_saveNote"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_send"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>
</LinearLayout>