<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground2"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <Button
        android:id="@+id/signup_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="126dp"
        android:background="@drawable/rounded_button_send"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext_signup" />

    <EditText
        android:id="@+id/password_edittext_signup"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="64dp"
        android:autofillHints=""
        android:background="@drawable/rounded_username_password"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext_signup" />

    <EditText
        android:id="@+id/username_edittext_signup"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="31dp"
        android:autofillHints=""
        android:background="@drawable/rounded_username_password"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/password_edittext_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_myFirstApp_signup" />


    <TextView
        android:id="@+id/textView_myFirstApp_signup"
        android:layout_width="300dp"
        android:layout_height="80sp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="cursive"
        android:text="@string/my_first_app"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username_edittext_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>