<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".AsyncTaskActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorBackround_note"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_asyncTask"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:fontFamily="@font/actor"
            android:gravity="center|start"
            android:text="@string/asynctask"
            android:textAllCaps="false"
            android:textColor="#017883"
            android:textSize="36sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#02727C" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="60dp"
            android:contentDescription="@string/imageicon"
            android:visibility="invisible"
            app:srcCompat="@drawable/android_welcome"
            tools:layout_editor_absoluteX="156dp"
            tools:layout_editor_absoluteY="411dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="29dp"
            android:progressTint="@color/colorAccent"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="312dp" />

        <TextView
            android:id="@+id/textView_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_download"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_button_send"
            android:text="@string/download"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="148dp" />
    </LinearLayout>


</LinearLayout>